# deno_sqlite_plugin

./: .gitignore  Cargo.toml  LICENSE  README.md  example.ts  prepared.ts  sqlite.ts
src/: bufferToBase64.js  lib.rs  mod.ts  prepared.ts
tests/: _open_plugin.js  blob.js  e2e_test.js  example.js  interface.js  ops_test.js
