[package]
name = "deno_sqlite_plugin"
version = "0.3.0"
authors = ["Daniel Buckmaster"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.11.0"
futures = "0.3.1"
deno_core = "0.41.0"
deno = "0.41.0"
serde = "1.0.104"
serde_json = "1.0.48"

[dependencies.rusqlite]
version = "0.23.1"
features = ["bundled"]
